[gd_scene load_steps=2 format=3 uid="uid://b024wi0mass6l"]

[ext_resource type="Script" path="res://Scripts/debug_menu.gd" id="1_55ltt"]

[node name="Debug Menu" type="CanvasLayer"]
script = ExtResource("1_55ltt")

[node name="FrictionSlider" type="HSlider" parent="."]
offset_left = 104.0
offset_top = 25.0
offset_right = 347.0
offset_bottom = 41.0
max_value = 0.5
step = 0.01
value = 0.3

[node name="FrictionLabel" type="RichTextLabel" parent="."]
offset_left = 28.0
offset_top = 18.0
offset_right = 91.0
offset_bottom = 45.0
text = "Friction"

[node name="FrictionValue" type="RichTextLabel" parent="."]
offset_left = 359.0
offset_top = 20.0
offset_right = 751.0
offset_bottom = 44.0
text = "0
"

[node name="XCLabel" type="RichTextLabel" parent="."]
offset_left = 8.0
offset_top = 65.0
offset_right = 122.0
offset_bottom = 90.0
text = "X component"

[node name="YCLabel" type="RichTextLabel" parent="."]
offset_left = 9.0
offset_top = 95.0
offset_right = 123.0
offset_bottom = 120.0
text = "Y component"

[node name="XSlider" type="HSlider" parent="."]
offset_left = 122.0
offset_top = 64.0
offset_right = 338.0
offset_bottom = 90.0
min_value = -200.0
max_value = 200.0
value = -40.0

[node name="XValue" type="RichTextLabel" parent="."]
offset_left = 359.0
offset_top = 62.0
offset_right = 751.0
offset_bottom = 86.0
text = "0
"

[node name="YSlider" type="HSlider" parent="."]
offset_left = 123.0
offset_top = 95.0
offset_right = 339.0
offset_bottom = 121.0
min_value = 800.0
max_value = 1500.0
value = 875.0

[node name="YValue" type="RichTextLabel" parent="."]
offset_left = 359.0
offset_top = 97.0
offset_right = 751.0
offset_bottom = 121.0
text = "0
"

[node name="CurlButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -131.0
offset_top = -86.0
offset_right = -38.0
offset_bottom = -34.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Curl"

[node name="ClockwiseCounterclockwise" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = -89.0
offset_right = 212.0
offset_bottom = -40.0
grow_vertical = 0
toggle_mode = true
text = "Counter Clockwise?"

[node name="FFButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -172.0
offset_right = -34.0
offset_bottom = -123.0
grow_horizontal = 0
grow_vertical = 0
text = "FF"

[connection signal="pressed" from="CurlButton" to="." method="_on_curl_button_pressed"]
[connection signal="button_down" from="FFButton" to="." method="_on_ff_button_button_down"]
[connection signal="button_up" from="FFButton" to="." method="_on_ff_button_button_up"]
